# sb-contracts

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  shared.rs  system_messages.rs
src/balances/: lock_updated.rs  mod.rs  shared.rs  update_command.rs  update_event.rs  update_failed_event.rs
src/emails/: email_event.rs  mod.rs
src/exchange/: exchange_quote_executed.rs  mod.rs
src/kyc/: kyc_update.rs  kyc_update_received.rs  mod.rs
src/personal_data/: mod.rs  personal_data_deactivated.rs  personal_data_email_updated.rs  personal_data_password_updated.rs  personal_data_phone_updated.rs
src/positions/: active_position_opened.rs  mod.rs  order.rs  order_updated.rs  pending_position_opened.rs  position.rs  position_activated.rs  position_closed.rs  position_margin_call.rs  position_opened.rs  position_pending.rs  position_top_up.rs  wallet_margin_call.rs
src/prices/: bid_ask.rs  bid_ask_date_time.rs  mod.rs
src/sessions/: mod.rs  session_action.rs
src/trader/: authenticated_event.rs  mod.rs  registered_event.rs
src/transactions/: mod.rs  shared.rs  transaction_converted.rs  transaction_received.rs  transaction_updated.rs
src/verifications/: mod.rs  two_fa_confirmed.rs  two_fa_settings_updated.rs  verification_approved.rs  verification_confirmed.rs  verification_pending.rs
