[package]
name = "sb-contracts"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
system-messages = []
verifications = []

[dependencies]
my-service-bus-abstractions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git" }

prost = "*"