[package]
name = "sb-contracts"
version = "1.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
system-messages = []
verifications = []
prices = []
balances = []
positions = []
transactions = []
sessions = []
personal-data = []
trader = []
exchange = []
kyc = []

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

prost-types = "*"
num_enum = "*"
prost = "*"
serde = { version = "*", features = ["derive"] }
